--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<!-- <link rel="apple-touch-icon" href="images/icon.png"> -->
 	<link rel="manifest" href="manifest.json">
-	<link rel="icon" href="icons/logo-white.svg" media="(prefers-color-scheme: dark)">
-	<link rel="icon" href="icons/logo.svg" media="(prefers-color-scheme: light)">
-	<!-- <link rel="shortcut icon" href="../files/favicon_white.ico" media="(prefers-color-scheme: dark)"/> -->
-	<!-- <link rel="shortcut icon" href="../files/favicon.ico" media="(prefers-color-scheme: light)" /> -->
+	<link rel="icon" href="icons/logo.svg" type="image/svg+xml">
 </head>
 
 <body>
